--- a/examples/footloose/footloose.yaml
+++ b/examples/footloose/footloose.yaml
@@ -3,9 +3,9 @@ cluster:
   privateKey: ~/.ssh/id_rsa
 machines:
 - count: 1
-  backend: docker
+  backend: ignite
   spec:
-    image: quay.io/footloose/ubuntu18.04
+    image: weaveworks/ignite-ubuntu:18.04
     name: server%d
     privileged: true
     volumes:
@@ -13,22 +13,15 @@ machines:
       source: /lib/modules
       destination: /lib/modules
     - type: volume
-      destination: /var/lib/containerd
-    - type: volume
-      destination: /var/lib/docker
-    - type: volume
-      destination: /var/lib/kubelet
+      destination: /var/lib/k0s
     portMappings:
     - containerPort: 22
-      hostPort: 9022
     - containerPort: 443
-      hostPort: 443
     - containerPort: 6443
-      hostPort: 6443
 - count: 1
-  backend: docker
+  backend: ignite
   spec:
-    image: quay.io/footloose/ubuntu18.04
+    image: weaveworks/ignite-centos:7
     name: worker%d
     privileged: true
     volumes:
@@ -36,11 +29,7 @@ machines:
       source: /lib/modules
       destination: /lib/modules
     - type: volume
-      destination: /var/lib/containerd
-    - type: volume
-      destination: /var/lib/docker
-    - type: volume
-      destination: /var/lib/kubelet
+      destination: /var/lib/k0s
     portMappings:
     - containerPort: 22
-      hostPort: 9022
+    - containerPort: 6443
