--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,7 +5,7 @@ on:
     branches-ignore:
       - "main"
   pull_request:
-    
+
 jobs:
 
   build:
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: 1.15
-          
+
     - name: Go modules cache
       uses: actions/cache@v2
       with:
@@ -25,7 +25,7 @@ jobs:
         key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
-              
+
     - name: Run golangci-lint
       uses: golangci/golangci-lint-action@v2.3.0
       with:
@@ -34,10 +34,10 @@ jobs:
 
     - name: Build
       run: make k0sctl
-    
+
     - name: Test
       run: go test -v ./...
-    
+
     - name: Cache compiled binary for further testing
       uses: actions/cache@v2
       id: cache-compiled-binary
@@ -46,13 +46,16 @@ jobs:
           k0sctl
         key: build-${{ github.run_id }}
 
-    
+
   smoke-basic:
     strategy:
       matrix:
         image:
-          - quay.io/footloose/ubuntu18.04
+          - quay.io/footloose/ubuntu20.04
           - quay.io/footloose/centos7
+          - quay.io/footloose/amazonlinux2
+          - quay.io/footloose/debian10
+          - quay.io/footloose/fedora29
     name: Basic 1+1 smoke
     needs: build
     runs-on: ubuntu-latest
@@ -72,7 +75,7 @@ jobs:
           path: |
             k0sctl
           key: build-${{ github.run_id }}
-      
+
       - name: run basic smoke
         env:
           LINUX_IMAGE: ${{ matrix.image }}
