--- a/examples/footloose/k0sctl.yaml.example
+++ b/examples/footloose/k0sctl.yaml.example
@@ -2,7 +2,7 @@ apiVersion: k0sctl.k0sproject.io/v1beta1
 kind: cluster
 spec:
   hosts:
-    - role: server
+    - role: controller
       ssh:
         address: 127.0.0.1
         port: 9022
@@ -11,4 +11,4 @@ spec:
         address: 127.0.0.1
         port: 9023
   k0s:
-    version: 0.9.1
+    version: 0.11.0-beta1
