--- a/smoke-test/k0sctl.yaml
+++ b/smoke-test/k0sctl.yaml
@@ -2,7 +2,7 @@ apiVersion: k0sctl.k0sproject.io/v1beta1
 kind: cluster
 spec:
   hosts:
-    - role: server
+    - role: controller
       ssh:
         address: "127.0.0.1"
         port: 9022
@@ -13,4 +13,4 @@ spec:
         port: 9023
         keyPath: ./id_rsa_k0s
   k0s:
-    version: "0.10.0-beta3"
+    version: "0.11.0-beta1"
