--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -44,9 +44,9 @@ jobs:
 
     - name: Cache compiled binary for further testing
       uses: actions/cache@v2
-      id: cache-compiled-binaries
+      id: cache-compiled-binary
       with:
-        path: ~/go/bin
+        path: k0sctl
         key: build-${{ github.run_id }}
 
     - name: Build windows
@@ -68,9 +68,9 @@ jobs:
     steps:
       - name: Restore compiled binary for smoke testing
         uses: actions/cache@v2
-        id: restore-compiled-binaries
+        id: restore-compiled-binary
         with:
-          path: ~/go/bin
+          path: k0sctl
           key: build-${{ github.run_id }}
 
       - name: K0sctl cache
@@ -107,9 +107,9 @@ jobs:
     steps:
       - name: Restore compiled binary for smoke testing
         uses: actions/cache@v2
-        id: restore-compiled-binaries
+        id: restore-compiled-binary
         with:
-          path: ~/go/bin
+          path: k0sctl
           key: build-${{ github.run_id }}
 
       - name: K0sctl cache
