--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -37,7 +37,7 @@ jobs:
         skip-go-installation: true
 
     - name: Build
-      run: make install
+      run: make k0sctl
 
     - name: Test
       run: go test -v ./...
