--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,11 +41,12 @@ jobs:
     - name: Test
       run: go test -v ./...
 
-    - name: Cache compiled binary for further testing
+    - name: Cache the compiled binary for further testing
       uses: actions/cache@v2
       id: cache-compiled-binary
       with:
-        path: k0sctl
+        path: |
+          k0sctl
         key: build-${{ github.run_id }}
 
     - name: Build windows
@@ -73,11 +74,12 @@ jobs:
         with:
           go-version: 1.15
 
-      - name: Restore compiled binary for smoke testing
+      - name: Restore the compiled binary for smoke testing
         uses: actions/cache@v2
         id: restore-compiled-binary
         with:
-          path: k0sctl
+          path: |
+            k0sctl
           key: build-${{ github.run_id }}
 
       - name: K0sctl cache
@@ -120,12 +122,12 @@ jobs:
         with:
           go-version: 1.15
 
-
-      - name: Restore compiled binary for smoke testing
+      - name: Restore the compiled binary for smoke testing
         uses: actions/cache@v2
         id: restore-compiled-binary
         with:
-          path: k0sctl
+          path: |
+            k0sctl
           key: build-${{ github.run_id }}
 
       - name: K0sctl cache
