--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -58,7 +58,7 @@ jobs:
         image:
           - quay.io/footloose/ubuntu18.04
           - quay.io/footloose/centos7
-          - quay.io/footloose/amazonlinux2
+            #- quay.io/footloose/amazonlinux2
           - quay.io/footloose/debian10
           - quay.io/footloose/fedora29
     name: Basic 1+1 smoke
