--- a/smoke-test/k0sctl.yaml
+++ b/smoke-test/k0sctl.yaml
@@ -16,3 +16,30 @@ spec:
         keyPath: ./id_rsa_k0s
   k0s:
     version: "0.11.0-rc1"
+    config:
+      images:
+        konnectivity:
+          image: us.gcr.io/k8s-artifacts-prod/kas-network-proxy/proxy-agent
+          version: v0.0.13
+        metricsserver:
+          image: gcr.io/k8s-staging-metrics-server/metrics-server
+          version: v0.3.7
+        kubeproxy:
+          image: k8s.gcr.io/kube-proxy
+          version: v1.20.4
+        coredns:
+          image: quay.io/jnummelin/coredns
+          version: 1.7.0
+        calico:
+          cni:
+            image: quay.io/jnummelin/calico-cni
+            version: v3.16.2
+          flexvolume:
+            image: quay.io/jnummelin/calico-pod2daemon-flexvol
+            version: v3.16.2
+          node:
+            image: quay.io/jnummelin/calico-node
+            version: v3.16.2
+          kubecontrollers:
+            image: quay.io/jnummelin/calico-kube-controllers
+            version: v3.16.2
