--- a/smoke-test/k0sctl.yaml
+++ b/smoke-test/k0sctl.yaml
@@ -15,7 +15,7 @@ spec:
         port: 9023
         keyPath: ./id_rsa_k0s
   k0s:
-    version: "0.11.0-rc1"
+    version: "0.11.0"
     config:
       images:
         konnectivity:
