--- a/smoke-test/k0sctl_legacy.yaml
+++ b/smoke-test/k0sctl_legacy.yaml
@@ -2,7 +2,7 @@ apiVersion: k0sctl.k0sproject.io/v1beta1
 kind: cluster
 spec:
   hosts:
-    - role: server
+    - role: controller
       uploadBinary: true
       ssh:
         address: "127.0.0.1"
@@ -15,4 +15,4 @@ spec:
         port: 9023
         keyPath: ./id_rsa_k0s
   k0s:
-    version: "0.10.0"
+    version: "0.11.1"
