Allow OS overriding in yaml config
Signed-off-by: Jussi Nummelin <jnummelin@mirantis.com>

--- a/smoke-test/Makefile
+++ b/smoke-test/Makefile
@@ -24,3 +24,6 @@ smoke-upgrade: $(footloose) id_rsa_k0s
 
 smoke-reset: $(footloose) id_rsa_k0s
 	./smoke-reset.sh
+
+smoke-os-override: $(footloose) id_rsa_k0s
+	FOOTLOOSE_TEMPLATE=footloose.yaml.osoverride.tpl OS_RELEASE_PATH=$(realpath os-release) K0SCTL_YAML=k0sctl_osoverride.yaml ./smoke-basic.sh
