Testability and tests

--- a/smoke-test/Makefile
+++ b/smoke-test/Makefile
@@ -19,6 +19,9 @@ id_rsa_k0s:
 smoke-basic: $(footloose) id_rsa_k0s
 	./smoke-basic.sh
 
+smoke-init: $(footloose) id_rsa_k0s
+	./smoke-init.sh
+
 smoke-upgrade: $(footloose) id_rsa_k0s
 	./smoke-upgrade.sh
 
