--- a/smoke-test/k0sctl-calico.yaml
+++ b/smoke-test/k0sctl-calico.yaml
@@ -13,7 +13,7 @@ spec:
         port: 9023
         keyPath: ./id_rsa_k0s
   k0s:
-    version: "0.13.1"
+    version: "1.21.1+k0s.0"
     config:
       spec:
         network:
