--- a/smoke-test/Makefile
+++ b/smoke-test/Makefile
@@ -29,4 +29,4 @@ smoke-reset: $(footloose) id_rsa_k0s
 	./smoke-reset.sh
 
 smoke-os-override: $(footloose) id_rsa_k0s
-	FOOTLOOSE_TEMPLATE=footloose.yaml.osoverride.tpl OS_RELEASE_PATH=$(realpath os-release) K0SCTL_YAML=k0sctl_osoverride.yaml ./smoke-basic.sh
+	FOOTLOOSE_TEMPLATE=footloose.yaml.osoverride.tpl OS_RELEASE_PATH=$(realpath os-release) OS_OVERRIDE="ubuntu" ./smoke-basic.sh
