--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -224,6 +224,37 @@ jobs:
           LINUX_IMAGE: ${{ matrix.image }}
         run: make smoke-reset
 
+  smoke-backup-restore:
+    strategy:
+      matrix:
+        image:
+          - quay.io/footloose/ubuntu18.04
+          - quay.io/footloose/centos7
+    name: Apply + backup + reset + restore
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16
+
+      - name: Restore compiled binary for smoke testing
+        uses: actions/cache@v2
+        id: restore-compiled-binary
+        with:
+          path: |
+            k0sctl
+          key: build-${{ github.run_id }}
+
+      - name: Run smoke tests
+        env:
+          LINUX_IMAGE: ${{ matrix.image }}
+        run: make smoke-backup-restore
+
   smoke-init:
     name: Init sub-command smoke test
     needs: build
