--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -91,6 +91,13 @@ jobs:
             !*.log
           key: k0sctl-cache
 
+      - name: Kubectl cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            smoke-test/kubectl
+          key: kubectl-1.21.3
+
       - name: Docker Layer Caching For Footloose
         uses: satackey/action-docker-layer-caching@v0.0.11
         continue-on-error: true
