Disable k0s telemetry in smoke tests

--- a/smoke-test/k0sctl-calico.yaml
+++ b/smoke-test/k0sctl-calico.yaml
@@ -16,6 +16,8 @@ spec:
     version: "1.21.1+k0s.0"
     config:
       spec:
+        telemetry:
+          enabled: false
         network:
           provider: calico
         images:
