Allow spec.host.files to have url sources
Lint

Add smoke tests, this probably fails as the abs-paths need to be cut

Maybe fix globbing

The amount of little stuff for such a simple thing..

Remove debug output

Dont upload plain directories

Simplified, fixed

Wrong dir in test

Another wrong dir

Chmod test

Extra space

More debug output

Even more debug output

Go get deprecated

Wrong dir again

Configurable chown and dirchmod

Test owner and dirPerm

Update README.md

Chown fixes

Quotes quotes quotes

Rebase aftermath

--- a/smoke-test/Makefile
+++ b/smoke-test/Makefile
@@ -9,27 +9,33 @@ ifeq ($(envsubst),)
 $(error 'envsubst' NOT found in path, please install it and re-run)
 endif
 
+.PHONY: k0sctl
+k0sctl:
+	$(MAKE) -C .. k0sctl
+
 $(footloose):
-	go get github.com/weaveworks/footloose/...@0.6.3
+	go install github.com/weaveworks/footloose/...@0.6.3
 
 id_rsa_k0s:
 	ssh-keygen -t rsa -f ./id_rsa_k0s -N ""
 
-
-smoke-basic: $(footloose) id_rsa_k0s
+smoke-basic: $(footloose) id_rsa_k0s k0sctl
 	./smoke-basic.sh
 
-smoke-init: $(footloose) id_rsa_k0s
+smoke-files: $(footloose) id_rsa_k0s k0sctl
+	./smoke-files.sh
+
+smoke-init: $(footloose) id_rsa_k0s k0sctl
 	./smoke-init.sh
 
-smoke-upgrade: $(footloose) id_rsa_k0s
+smoke-upgrade: $(footloose) id_rsa_k0s k0sctl
 	./smoke-upgrade.sh
 
-smoke-reset: $(footloose) id_rsa_k0s
+smoke-reset: $(footloose) id_rsa_k0s k0sctl
 	./smoke-reset.sh
 
-smoke-os-override: $(footloose) id_rsa_k0s
+smoke-os-override: $(footloose) id_rsa_k0s k0sctl
 	FOOTLOOSE_TEMPLATE=footloose.yaml.osoverride.tpl OS_RELEASE_PATH=$(realpath os-release) OS_OVERRIDE="ubuntu" ./smoke-basic.sh
 
-smoke-backup-restore: $(footloose) id_rsa_k0s
+smoke-backup-restore: $(footloose) id_rsa_k0s k0sctl
 	./smoke-backup-restore.sh
