--- a/smoke-test/Makefile
+++ b/smoke-test/Makefile
@@ -1,4 +1,3 @@
-
 footloose := $(shell which footloose)
 ifeq ($(footloose),)
 footloose := $(shell go env GOPATH)/bin/footloose
@@ -9,27 +8,26 @@ ifeq ($(envsubst),)
 $(error 'envsubst' NOT found in path, please install it and re-run)
 endif
 
+basic: $(footloose) id_rsa_k0s
+	./smoke-basic.sh
+
 $(footloose):
 	go get github.com/weaveworks/footloose/...@0.6.3
 
 id_rsa_k0s:
 	ssh-keygen -t rsa -f ./id_rsa_k0s -N ""
 
-
-smoke-basic: $(footloose) id_rsa_k0s
-	./smoke-basic.sh
-
-smoke-init: $(footloose) id_rsa_k0s
+init: $(footloose) id_rsa_k0s
 	./smoke-init.sh
 
-smoke-upgrade: $(footloose) id_rsa_k0s
+upgrade: $(footloose) id_rsa_k0s
 	./smoke-upgrade.sh
 
-smoke-reset: $(footloose) id_rsa_k0s
+reset: $(footloose) id_rsa_k0s
 	./smoke-reset.sh
 
-smoke-os-override: $(footloose) id_rsa_k0s
+os-override: $(footloose) id_rsa_k0s
 	FOOTLOOSE_TEMPLATE=footloose.yaml.osoverride.tpl OS_RELEASE_PATH=$(realpath os-release) OS_OVERRIDE="ubuntu" ./smoke-basic.sh
 
-smoke-backup-restore: $(footloose) id_rsa_k0s
+backup-restore: $(footloose) id_rsa_k0s
 	./smoke-backup-restore.sh
