--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -51,7 +51,9 @@ jobs:
         run: make upload
 
       - name: "Read sha256sums"
+        id: read_sums
         uses: andstor/file-reader-action@v1
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions
         with:
           path: "bin/checksums.txt"
