--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -79,7 +79,7 @@ jobs:
           - quay.io/footloose/centos7
             #- quay.io/footloose/amazonlinux2
           - quay.io/footloose/debian10
-          - quay.io/footloose/fedora29
+            # - quay.io/footloose/fedora29
     name: Basic 1+1 smoke
     needs: build
     runs-on: ubuntu-latest
@@ -159,8 +159,10 @@ jobs:
           #- quay.io/footloose/amazonlinux2
           #- quay.io/footloose/debian10
           #- quay.io/footloose/fedora29
-          #
-    name: Upgrade 0.10 --> 0.11
+        k0s_from:
+          - 0.11.0
+          - v1.21.6+k0s.0
+    name: Upgrade
     needs: build
     runs-on: ubuntu-latest
 
@@ -182,6 +184,7 @@ jobs:
       - name: Run smoke tests
         env:
           LINUX_IMAGE: ${{ matrix.image }}
+          K0S_FROM:  ${{ matrix.k0s_from }}
         run: make smoke-upgrade
 
   smoke-reset:
